--- a/src/shop/templates/shop/base.html
+++ b/src/shop/templates/shop/base.html
@@ -49,8 +49,9 @@
           </li>
         </ul>
 
-        <form role="search" class="mx-auto">
-          <input class="form-control" type="search" placeholder="Search" aria-label="Search">
+        <form role="search" class="mx-auto" method="get" action="{%  url 'shop:search-results' %}">
+          <input class="form-control" type="search" placeholder="Search by Name and Description" aria-label="Search" name="SearchByName">
+
         </form>
 
         <ul class="navbar-nav ml-auto">
