--- a/src/shop/templates/shop/home.html
+++ b/src/shop/templates/shop/home.html
@@ -6,7 +6,14 @@
 {% block content %}
     <div class="album py-5 bg-body-tertiary">
     <div class="container">
-    <div class="pb-3 h5">All Products</div>
+    <div class="pb-3 h5">
+        {% if selected_category %}
+            {{ selected_category }}
+        {% else %}
+            All products
+        {% endif %}
+    </div>
+
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-5 g-3">
 
         {% for product in products %}
@@ -18,7 +25,7 @@
             {% if product.first_image %}
                 <img class="img-fluid" alt="Responsive image" src="{{ product.first_image.url }}">
             {% else %}
-                <img class="img-fluid" alt="Default image" src="media/no_image_available.jpg">
+                <img class="img-fluid" alt="Default image" src="{{ MEDIA_URL }}no_image_available.jpg">
             {% endif %}
           </a>
 
