--- a/dashboards/templates/dashboards/dashboard.html
+++ b/dashboards/templates/dashboards/dashboard.html
@@ -33,24 +33,17 @@
           <ul class="nav flex-column">
             <!-- Place to add page titles in the sidebar -->
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="{% url 'dashboards:admin-dashboard-list' %}">
+              <a class="nav-link active" aria-current="page" href="{% url 'dashboards:dashboard-list' %}">
                 <i class="fa fa-home"></i>
                 Dashboard
               </a>
             </li>
-{#            <li class="nav-item">#}
-{#              <a class="nav-link" href="{% url 'dashboards:dashboard-orders-list' %}">#}
-{#                <i class="fa fa-file"></i>#}
-{#                Daily Orders#}
-{#              </a>#}
-{#            </li>#}
           </ul>
         </div>
       </nav>
 
       <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
         <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-{#          <h1 class="h2">Dashboard</h1>#}
         </div>
 
         <!-- Place to add the Plotly chart -->
